# SDK-SLM320P

./: .clang-format  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/demo/: CMakeLists.txt
app/demo/include/: image.h
app/demo/lib/include/: EX_math_add.h  EX_math_sub.h
app/demo/oem/: OEM_audio_demo.c  OEM_gpio.c  OEM_keypad_demo.c  OEM_lcd.c  OEM_nw_tcp_demo.c  OEM_usb_serial_demo.c
app/demo/oem/include/: oem.h
app/demo/src/: main.c
cmake/: core_config.cmake  extension.cmake
components/include/: abup_config.h  abup_fota.h  app_config.h  at_cfg.h  at_engine.h  at_response.h  atr_config.h  ats_config.h  audio_config.h  audio_decoder.h  audio_device.h  audio_encoder.h  audio_player.h  audio_reader.h  audio_recorder.h  audio_tonegen.h  audio_types.h  audio_writer.h  boot_config.h  bt_abs.h  bt_cfg.h  bt_config.h  bt_ps_version.h  bt_types.h  cfw.h  cfw_config.h  cfw_event.h  connectivity_config.h  diag.h  diag_config.h  drv_adc.h  drv_charger.h  drv_config.h  drv_debug_port.h  drv_gpio.h  drv_i2c.h  drv_keypad.h  drv_lcd.h  drv_lcd_v2.h  drv_led.h  (+65 more)
components/include/8910/: hal_address_map.h  hal_chip_8910.h  hal_ddr_32m_200mhz_cfg.h  hal_ddr_32m_400mhz_cfg.h  hal_ddr_64m_200mhz_cfg.h  hal_efuse_def.h  hal_iomux_pin.h  hal_irq_priority.h  hal_psram_200mhz_cfg.h  hal_rom_api.h  keypad_map_8910.csv  keypad_map_8910_SLM320P.csv  pinmux_8910_SLM320P_v2.csv  pinmux_8910_SLM320_v2.csv
components/include/hwregs/8910/: adi_mst.h  aes.h  aif.h  analog_reg.h  aon_ifc.h  ap_ifc.h  arm_axidma.h  arm_uart.h  aud_2ad.h  camera.h  cp_clkrst.h  cp_idle.h  cp_mailbox.h  cp_pwrctrl.h  cp_sysreg.h  debug_host.h  debug_uart.h  dmc400.h  efuse_ctrl.h  gallite_generic_config.h  (+37 more)
components/include/lwip/: arch.h  debug.h  dns.h  err.h  errno.h  ip4.h  ip4_addr.h  ip4_nat.h  ip6_addr.h  netif.h  opt.h  sys.h  tcp.h  timeouts.h
components/include/mbedtls/: aes.h  base64.h  config.h  ssl.h
components/lib/: fdl1.img  fdl2.img
components/newlib/include/: assert.h
examples/: CMakeLists.txt  NW_TCP_example.c  hello_world.c  mg_abup_fota.c  mg_adc.c  mg_aes.c  mg_aes2.c  mg_alarm_example.c  mg_at_device.c  mg_at_gpio.c  mg_at_leds.c  mg_at_uart.c  mg_audio.c  mg_aurecord_example.c  mg_baolan_lcd.c  mg_baolan_lcd.h  mg_battery.c  mg_bl.c  mg_bt_example.c  mg_call.c  mg_cc_example.c  mg_cmd_forward.c  mg_cus_tone.c  mg_date_example.c  mg_event.c  mg_fifo.c  mg_file.c  mg_fota_md5.c  mg_fota_new.c  mg_fota_old.c  mg_fs_example.c  mg_ftp.c  mg_gpio.c  mg_gps.c  mg_gps_example.c  mg_gui.c  mg_http_example.c  mg_keypad.c  mg_lbs.c  mg_lbs_example.c  (+36 more)
ldscripts/: app_flashimg.ld
littlevgl/: CMakeLists.txt  Kconfig  lv_conf.h  lv_gui_config.h
littlevgl/include/: lv_gui_config.h.in  lv_gui_main.h
littlevgl/lv_port/: lv_gui_bl.c  lv_gui_example1.c  lv_gui_example2.c  lv_gui_main.c
littlevgl/lv_port/meig/: chinese_ali_16.c  cjk.c  meig.c  meig.h  png_back.c  png_battery_10.c  png_battery_100.c  png_battery_20.c  png_battery_30.c  png_battery_40.c  png_battery_50.c  png_battery_60.c  png_battery_70.c  png_battery_80.c  png_battery_90.c  png_call.c  png_call_left.c  png_call_right.c  png_group.c  png_group_icon.c  png_group_title.c  png_member.c  png_ok.c  png_setting.c  png_signal.c  png_signal_1.c  png_signal_2.c  png_signal_3.c  png_signal_none.c
littlevgl/lvgl/src/lv_core/: lv_group.h  lv_obj.h  lv_refr.c
simid/: CMakeLists.txt
simid/inc/: simid.h  simidplatform.h
simid/src/: simid.c  simidplatform.c
tools/: core_launch.bat  core_launch.sh  pacgen.py
tools/linux/: dtools
tools/win32/: fota8910_appimg_flash.xml
tools/win32/setting/: fota8910.xml
ty_ssnb/: CMakeLists.txt
ty_ssnb/app/: fota_task.c  main_task.c  queue_task.c
ty_ssnb/cloud/: ty_mqtt_ca_cert.c  ty_mqtt_dyn_reg.c  ty_mqtt_parser.c  ty_mqtt_sign.c  ty_ss_cloud.c
ty_ssnb/include/: main_task.h  queue_task.h  ty_devinfo.h  ty_fota.h  ty_mqtt_basic_info.h  ty_ss_cloud.h
ty_ssnb/lib/include/: lpa.h
ty_ssnb/os/: ty_devinfo.c
ty_ssnb/plat/: CMakeLists.txt
ty_ssnb/plat/include/: os_queue.h  ty_at_adpt.h  ty_flash_adpt.h  ty_fota_adpt.h  ty_http_adpt.h  ty_mqtt_adpt.h  ty_os_adpt.h  ty_sc_adpt.h  ty_socket_adpt.h  ty_ssl_adpt.h
ty_ssnb/plat/nb12/: nb12_at_adpt.c  nb12_flash_adpt.c  nb12_fota_adpt.c  nb12_mqtt_adpt.c  nb12_os_adpt.c  nb12_sc_adpt.c  nb12_socket_adpt.c
ty_ssnb/plat/slm320/: slm320_at_adpt.c  slm320_flash_adpt.c  slm320_fota_adpt.c  slm320_http_adpt.c  slm320_mqtt_adpt.c  slm320_os_adpt.c  slm320_os_adpt.c_local  slm320_sc_adpt.c  slm320_socket_adpt.c  slm320_ssl_adpt.c
ty_ssnb/plat/ss11/: os_queue.c  ss11_at_adpt.c  ss11_flash_adpt.c  ss11_fota_adpt.c  ss11_http_adpt.c  ss11_mqtt_adpt.c  ss11_os_adpt.c  ss11_sc_adpt.c  ss11_socket_adpt.c
ty_ssnb/plat/test/: http_test.c  mqtt_test.c  rtos_api.c  rtos_api.h  sc_channel_test.c  sslsock_test.c  tcp_test.c  ty_sock_test.h  ty_ss_at.c  ty_ss_at.h
ty_ssnb/protocol/: CMakeLists.txt
ty_ssnb/protocol/http/: CMakeLists.txt
ty_ssnb/protocol/http/include/: http.h  http_client.h  http_def_config.h  http_parser.h  http_wrapper.h
ty_ssnb/protocol/http/src/: http_parser.c  http_string.c
ty_ssnb/protocol/linksdk/: http_post_interface.c  http_post_interface.h
ty_ssnb/protocol/linksdk/LinkSDK/: ChangeLog.md
ty_ssnb/protocol/linksdk/LinkSDK/core/: aiot_http_api.c  aiot_http_api.h
ty_ssnb/protocol/linksdk/LinkSDK/core/utils/: core_auth.c  core_http.c  core_http.h  core_string.c  core_string.h
ty_ssnb/protocol/linksdk/LinkSDK/demos/: http_basic_demo.c
ty_ssnb/protocol/linksdk/LinkSDK/portfiles/aiot_port/: nb12_port.c
ty_ssnb/protocol/mqtt/: MQTTClient.c  MQTTClient.h  MQTT_port.c  MQTT_port.h
ty_ssnb/protocol/tls/mbedtls/port/: mbedtls_interface.c  mbedtls_interface.h
ty_ssnb/utils/: at_tok.c  at_tok.h  base64.c  base64.h  des.c  des.h  hex_util.c  hex_util.h  json_util.c  json_util.h  md5.c  md5.h  memleak.c  memleak.h  sha256.c  sha256.h  ty_crc32.c  ty_crc32.h  ty_encoding_util.c  ty_encoding_util.h  ty_tlv.c  ty_tlv.h  ty_util.c  ty_util.h
user/: CMakeLists.txt  app_main.c  app_main.h  ty_esim_at.c  ty_esim_at.h  ty_fota_at.c
(+11 files in other folders)
